fix placeholder style for dark mode

--- a/src/renderer/scss/component/_card.scss
+++ b/src/renderer/scss/component/_card.scss
@@ -121,12 +121,13 @@
   font-size: 1.1em;
 
   &:not(:first-of-type) {
-    margin-top: $spacing-vertical * 3/2;
+    padding-top: $spacing-vertical * 3/2;
   }
 }
 
 .card__subtext {
   font-size: 0.85em;
+  padding-top: $spacing-vertical * 1/3;
 }
 
 .card__meta {
